# youtube-takeout-to-db

./: .gitignore  LICENSE  README.md  compose.yaml  example_playlist.csv  example_video.js  get_details.py  helpful_commands.txt  pyproject.toml
youtubetakeout/: .my_pgpass  .pg_service.conf  asgi.py  settings.py  urls.py  wsgi.py
