[tool.poetry]
name = "youtube-takeout-to-db"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
requests = "^2.32.3"
psycopg = "^3.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
